Coded html and css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1></h1>
+    <nav class="navbar">
+        <div class="navbar_container">
+            <a href="/" id="navbar_logo">研究</a>
+            <div class="navbar_toogle" id="mobile_menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
 
-    aabb
+            <ul class="navbar_menu">
+                <li class="navbar_item">
+                    <a href="/" class="navbar_links">Home</a>
+                </li>
+                <li class="navbar_item">
+                    <a href="/tech.html" class="navbar_links"> Tech </a>
+                </li>
+                <li class="navbar_item">
+                    <a href="/tech.html" class="navbar_links"> Products </a>
+                </li>
+                <li class="navbar_btn">
+                    <a href="/" class="button"> Sign Up </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
